--- a/HalalMapper/Base.lproj/Main.storyboard
+++ b/HalalMapper/Base.lproj/Main.storyboard
@@ -120,10 +120,10 @@
             </objects>
             <point key="canvasLocation" x="697" y="574"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Favorites View Controller-->
         <scene sceneID="aMG-sB-qnz">
             <objects>
-                <tableViewController id="Byr-Nn-I3H" sceneMemberID="viewController">
+                <tableViewController id="Byr-Nn-I3H" customClass="FavoritesViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="OCI-7M-na6">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
